addd base.html and parent child template

--- a/templates/entries.html
+++ b/templates/entries.html
@@ -1,13 +1,9 @@
-<html>
-    <head>
-
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block content %}
         {% for entry in entries %}
              {{entry.title}}
              {{entry.category}}
              {{entry.rating}}
              {{entry.comments}}
         {% endfor %}
-    </body>
-</html>
+{% endblock %}
