--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,16 @@
 
     </head>
     <body>
+     <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">MyAnimeDiary</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Entries</a></li>
+        <li><a href="badges.html">Make An Entry</a></li>
+      </ul>
+    </div>
+  </nav>
+
         <h1>Outside!</h1>
         {% block content %}
         {% endblock %}
