--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,16 @@
 
     </head>
     <body>
-     <nav>
+    <!-- Navigation Bar from Materialize -->
+    <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">MyAnimeDiary</a>
+      <a href="#" class="brand-logo">MyAnimeVault</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">Entries</a></li>
         <li><a href="badges.html">Make An Entry</a></li>
       </ul>
     </div>
-  </nav>
+    </nav>
 
         <h1>Outside!</h1>
         {% block content %}
