--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Navigation Bar from Materialize -->
     <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">MyAnimeVault</a>
+      <a href="#" class="brand-logo">OurAnimeVault</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">Entries</a></li>
         <li><a href="badges.html">Make An Entry</a></li>
