--- a/templates/base.html
+++ b/templates/base.html
@@ -2,34 +2,66 @@
 <html lang="en">
   <head>
     <title>OurAnimeVault</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Below taken from Materialize set up page -->
-    <!-- Import Google Icon Font -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-            
-  </head>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+    <!--Required meta tag that's supposed to be after Bootstrap(CSS)-->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+ </head>
   <body>
-  <!-- Navigation Bar from Materialize -->
-    <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">OurAnimeVault</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Entries</a></li>
-        <li><a href="badges.html">Make An Entry</a></li>
-      </ul>
-    </div>
+  <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+        <a href="#" class="navbar-brand">OurAnimeVault</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Entries</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Make An Entry</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-      
-    
+
+        <div class="container-fluid">
+            <div class="welcomepage row">
+                <div class="col-12">
+                    <!-- Title in its own div so as to be able to enclose it in a semi-opaque box that seems to hover on top of the background image -->
+                    <div class="title">
+                        <h1>Welcome to OurAnimeVault</h1>
+                    </div>
+
+                    <div class="about">
+                        <!-- About info in its own div so as to be able to enclose it in a semi-opaque box that seems to hover on top of the background image -->
+                        <p>An online resposity in which anyone can make an entry to share, rate and critique their favourite anime titles.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <footer>
+        <!-- Social media handles in footer -->
+        <div class="s-m">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://ie.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github-square"></i></a>
+        </div>
+
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
