--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,18 @@
                     <a href="#" class="nav-link">Entries</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Make An Entry</a>
+                    <a href="makeentry.html" class="nav-link">Make An Entry</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <main>
+		<!--The container applies the html to other pages-->
+		<div class="container">
+			{% block content %} {% endblock %}
+		</div>
+	</main>
 
         <div class="container-fluid">
             <div class="welcomepage row">
