--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Entries</a>
+                    <a href="entries.html" class="nav-link">Entries</a>
                 </li>
                 <li class="nav-item">
                     <a href="makeentry.html" class="nav-link">Make An Entry</a>
