--- a/templates/entries.html
+++ b/templates/entries.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %} {% block content %} 
-
-         {% for entry in entries %}
+{% extends "base.html" %} {% block content %} {% for entry in entries %}
         <div id="accordion">
   <div class="card">
     <div class="card-header" id="headingOne">
