fixed entries css and display and added media queries

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,8 +34,24 @@
     opacity: 80%;
 }
 
+.entriespage {
+    height: 100vh;
+    background-image: url(../css/images/welcomeoav.jpg);
+    background-size: cover;
+    text-align: center;
+    padding: 60px 30px 30px 30px;
+    object-position: center;
+}
+
+.card {
+    background-color: #1e3231;
+    color: whitesmoke;
+    width: 50%;
+    margin: auto;
+}
+
 .formpage {
-    height:100vh;
+    height: 100vh;
     background-image: url(../css/images/welcomeoav.jpg);
     background-size: cover;
     text-align: center;
@@ -91,5 +107,11 @@
   @media only screen and (min-width: 1000px) {
     .about{
           width: 50%
+      }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .card{
+          width: 90%
       }
   }
