--- a/templates/entries.html
+++ b/templates/entries.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %} {% for entry in entries %}
-        <div id="accordion">
+        <div id="accordion" class="entriespage">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
