--- a/templates/makeentry.html
+++ b/templates/makeentry.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %} {% block content %} 
 <div class="formpage row">
-<div class="title">
-<h2>Go ahead and add to the vault!</h2>
-</div>
-  <div class="col-12 my-auto">
+  <div class="title">
      <form id="contact-form" name="contact-form" method="post">
        <input type="hidden" name="contact_number">
        <input type="text" class="form-control" name="anime_title" placeholder="Title">
+       <input type="text" class="form-control" name="anime_genre" placeholder="Genre">
        <input type="number" min="0" max="5" class="form-control" name="anime_rating" placeholder="Rating">
        <textarea name="message" class="form-control" rows="3" placeholder="Comments"></textarea>
-       <input type="submit" value="Send">
+       <input type="submit" value="Add To Vault!">
      </form>
   </div>
 </div>
