updated media query comment to include entries display

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,7 +97,7 @@
     transform: scale(1.6) rotate(25deg);
  }
 
- /* Media queries used to enhance responsiveness and make title and about info adapt better to different screen sizes */
+ /* Media queries used to enhance responsiveness and make title and about info  and entries accordion adapt better to different screen sizes */
  @media only screen and (min-width: 1000px) {
     .title{
           width: 30%
