--- a/templates/makeentry.html
+++ b/templates/makeentry.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %} {% block content %} 
 <div class="formpage row">
   <div class="title">
-     <form id="contact-form" name="contact-form" method="post">
+     <form id="contact-form" action="{{url_for('insert_entries')}}" name="contact-form" method="post">
        <input type="hidden" name="contact_number">
        <input type="text" class="form-control" name="title" placeholder="Title">
-       <input type="text" class="form-control" name="genre" placeholder="Genre">
+       <input type="text" class="form-control" name="category" placeholder="Category">
        <!-- Included min and max number so that user will be unable to make an entry with a rating more than five -->
        <input type="number" min="0" max="5" class="form-control" name="rating" placeholder="Rating">
-       <textarea name="comment" class="form-control" rows="3" placeholder="Comments"></textarea>
+       <textarea name="comments" class="form-control" rows="3" placeholder="Comments"></textarea>
        <input type="submit" value="Add To Vault!">
      </form>
   </div>
