corrected spelling in about info

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
                     <div class="about">
                         <!-- About info in its own div so as to be able to enclose it in a semi-opaque box that seems to hover on top of the background image -->
-                        <p>An online resposity in which anyone can make an entry to share, rate and critique their favourite anime titles.</p>
+                        <p>An online respository in which anyone can make an entry to share, rate and critique their favourite anime titles.</p>
                     </div>
                 </div>
             </div>
