--- a/templates/makeentry.html
+++ b/templates/makeentry.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %} 
 <div class="formpage row">
   <div class="title">
-     <form id="contact-form" action="{{url_for('insert_entries')}}" name="contact-form" method="post">
+     <form id="contact-form" action="{{url_for('get_makeentry')}}" name="contact-form" method="POST">
        <input type="hidden" name="contact_number">
        <input type="text" class="form-control" name="title" placeholder="Title">
        <input type="text" class="form-control" name="category" placeholder="Category">
