added edit and delete button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,11 @@
     margin-left: 19%;
 }
 
+.btn {
+    float: left;
+    margin: 4px; 
+}
+
 /* Social media handles */
 .s-m {
     text-align: center;
