--- a/templates/entries.html
+++ b/templates/entries.html
@@ -3,6 +3,10 @@
         {% for entry in entries %}
   <div class="card">
     <div class="card-header" id="heading{{loop.index}}">
+    <div class="col s3">
+    <button type="button" class="btn btn-info btn-sm">Edit</button>
+    <button type="button" class="btn btn-danger btn-sm">Delete</button>
+    </div>
       <h5 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{loop.index}}" aria-expanded="false" aria-controls="collapse{{loop.index}}">
           {{entry.title}} - {{entry.category}} - {{entry.rating}}
