--- a/templates/entries.html
+++ b/templates/entries.html
@@ -4,7 +4,7 @@
   <div class="card">
     <div class="card-header" id="heading{{loop.index}}">
     <div class="col s3">
-    <button type="button" class="btn btn-info btn-sm">Edit</button>
+    <a type="button" class="btn btn-info btn-sm" href="{{url_for('edit_entry', entry_id=entry._id)}}">Edit</a>
     <button type="button" class="btn btn-danger btn-sm">Delete</button>
     </div>
       <h5 class="mb-0">
