--- a/templates/entries.html
+++ b/templates/entries.html
@@ -5,7 +5,7 @@
     <div class="card-header" id="heading{{loop.index}}">
     <div class="col s3">
     <a type="button" class="btn btn-info btn-sm" href="{{url_for('edit_entry', entry_id=entry._id)}}">Edit</a>
-    <button type="button" class="btn btn-danger btn-sm">Delete</button>
+    <a type="button" class="btn btn-danger btn-sm" href="{{url_for('delete_entry', entry_id=entry._id)}}">Delete</a>
     </div>
       <h5 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{loop.index}}" aria-expanded="false" aria-controls="collapse{{loop.index}}">
