added min-height 2 make entries page adapt to lnger list

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@
 }
 
 .entriespage {
-    
+    min-height: 100vh;
     background-image: url(../images/welcomeoav.jpg);
     background-size: cover;
     text-align: center;
