--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main>
-		<!--The container applies the html to other pages-->
+		<!--The container applies the base elements to other pages-->
 		<div class="base">
         
 			{% block content %} {% endblock %}
