--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,9 @@
-/*NavBar*/
+/* NavBar */
 .navbar {
     background-color: #1e3231;
 }
 
+/* Welcome page */
 .welcomepage {
   background-image: url(../images/welcomeoav.jpg);
   background-size: cover;
@@ -34,6 +35,7 @@
     opacity: 80%;
 }
 
+/* Entries page */
 .entriespage {
     min-height: 100vh;
     background-image: url(../images/welcomeoav.jpg);
@@ -43,6 +45,7 @@
     object-position: center;
 }
 
+/* Collapsible/accordion that displays user entries */
 .card {
     background-color: #1e3231;
     color: whitesmoke;
@@ -50,6 +53,7 @@
     margin: auto;
 }
 
+/* Form page */
 .formpage {
     height: 100vh;
     background-image: url(../images/welcomeoav.jpg);
@@ -59,7 +63,7 @@
     color: black;
 }
 
-/* Contact form */
+/* Make an entry form */
 .form-control {
     margin: 20px 0;
     width: 60%;
