--- a/templates/entries.html
+++ b/templates/entries.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block content %} 
         <div id="accordion" class="entriespage">
         {% for entry in entries %}
+  <!-- Collapsible/accordion that displays user entries -->
   <div class="card">
     <div class="card-header" id="heading{{loop.index}}">
     <div class="col s3">
