amended our to my of app name

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
    <body>
       <!-- Navigation Bar -->
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-         <a href="{{url_for('get_index')}}" class="navbar-brand">OurAnimeVault</a>
+         <a href="{{url_for('get_index')}}" class="navbar-brand">MyAnimeVault</a>
          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
          <span class="navbar-toggler-icon"></span>
          </button>
