--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
       <div class="col-12">
          <!-- Title in its own div so as to be able to enclose it in a semi-opaque box that seems to hover on top of the background image -->
          <div class="title">
-            <h1>Welcome To OurAnimeVault</h1>
+            <h1>Welcome To MyAnimeVault</h1>
          </div>
          <div class="about">
             <!-- About info in its own div so as to be able to enclose it in a semi-opaque box that seems to hover on top of the background image -->
