added comment to show source of code - bootstrap

--- a/templates/makeentry.html
+++ b/templates/makeentry.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %} 
-<!-- Make an entry form -->
+<!-- Make an entry form taken from Bootstrap-->
 <div class="formpage row">
    <!-- The below div class is title so that the title CSS applies to this form as well -->
    <div class="title">
