--- a/templates/editentry.html
+++ b/templates/editentry.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %} 
-<!-- Edit enrty form -->
+<!-- Edit enrty form taken from Bootstrap-->
 <div class="formpage row">
    <!-- The below div class is title so that the title CSS applies to this form as well -->
    <div class="title">
